[package]
name = "core-services"
version = "0.2.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
license = "CC0-1.0"
description = "Bindings for CoreServices.framework"
categories = ["os::macos-apis"]
keywords = ["launch-services", "uti", "lsopen"]
repository = "https://github.com/kornelski/core-services"
homepage = "https://lib.rs/crates/core-services"
include = ["README.md", "/src/*.rs", "Cargo.toml"]

[dependencies]
core-foundation = "0.9.1"

[badges]
maintenance = { status = "passively-maintained" }
